<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediaGrid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pick_name">Picking a user name</string>
    <string name="name_taken">User name already taken</string>
    <string name="hint_input_name">Input user name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <string name="title_activity_media_main">MediaMainActivity</string>
    <string name="title_chat">Chat</string>
    <string name="title_media">Media</string>
    <string name="title_setting">Setting</string>

    <!-- pull to refresh -->
    <string name="release_to_refresh">Release to refresh</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="refreshing">Refreshing&#8230;</string>
    <string name="updating">Last updated: </string>
    
    <!-- upload & mkdir -->
    <string name="upload">Upload</string>
    <string name="mkdir">MakeDir</string>
    
    <string name="date_format">MM/dd kk:mm:ss</string>
    <string name="right_arrow">>></string>
    
    <!-- data for testing -->
    <string name="file_name">file name</string>
    <string name="test_time">2013/03/02 18:00</string>
    <string name="file_size">1,234B</string>
    <string name="user_photo">user photo</string>
    <string name="testuserA">John</string>
    <string name="testuserB">Jescy</string>
    <string name="testuserC">McCormick</string>
    <string name="test_server">192.168.1.109:5984</string>
    <string name="everyone">to: Everyone</string>
    <string name="hello">How are you, John?</string>
    <string name="path">Home>>Documents</string>
    <!-- send message -->
    <string name="hint_input_msg">Input message here</string>
    <string name="send_msg">Send</string>
    
    <!-- settings -->
    <string name="switch_room">Switch room</string>
    <string name="log_out">Log out</string>
    <string name="about">About MediaGrid</string>
    
    <!-- promotion message -->
    <string name="upload_success">Upload file success.</string>
    <string name="upload_failed">Upload file failed.</string>
    <string name="makedir_success">Make directory success.</string>
    <string name="makedir_failed">Make directory failed.</string>
    <string name="load_success">Load files success.</string>
    <string name="load_failed">Load files failed.</string>
    <string name="download_success">download files success.</string>
    <string name="download_failed">download files failed.</string>
    
    <string name="empty"></string>
    <string name="configure">config</string>
    <string name="bad_format">ip or port bad format!!</string>
    <string name="ip_address">IP Address:</string>
    <string name="port_num"  >Port Number:</string>
    
    <string name="media_grid">MediaGrid</string>
</resources>
