<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/chat_list_item_left_bg"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/chat_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testuserA"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_arrow"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/chat_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testuserB"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/chat_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_time"
            android:textColor="#000000"
            android:gravity="right"
            android:textSize="12sp" />

    </LinearLayout>
	<TextView
            android:id="@+id/chat_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="#000000"
            android:textSize="20sp" />
    
</LinearLayout>