<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <!-- 头像 -->

    <ImageView
        android:contentDescription="@string/user_photo"
        android:id="@+id/user_photo"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:src="@drawable/file_ico" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_weight="5"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/file_name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/file_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_size"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/upload_time"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/test_time"
                android:textColor="#101010"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>