<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E5E5E5"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dismantle.mediagrid.MediaMainActivity$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/layout_send_msg"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#F3F3F3"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="#A3A3A3"
            android:contentDescription="@string/empty" />

        <EditText
            android:id="@+id/txt_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_send"
            android:background="@drawable/chat_input_bg"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:hint="@string/hint_input_msg" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txt_msg"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/txt_msg"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/button_send_bg"
            android:textColor="#3F47CC"
            android:text="@string/send_msg" />
    </RelativeLayout>

    <com.dismantle.mediagrid.RTPullListView
        android:id="@+id/chat_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/layout_send_msg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp"
        android:scrollbars="none" >
    </com.dismantle.mediagrid.RTPullListView>

    <Button
        android:id="@+id/btn_receiver"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/button_receiver_bg"
        android:text="@string/everyone"
        android:textColor="#A8A8A8"
        android:textSize="15sp" />

</RelativeLayout>